--- a/sportsdb.html
+++ b/sportsdb.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -14,6 +15,34 @@
     />
   </head>
   <body>
+    <div class="container w-100 m-auto">
+      <div class="row w-100 m-auto">
+        <div class="col-md-6 m-auto text-center">
+          <h1>left side</h1>
+          <div class="input-group mb-3">
+            <input
+              id="search-box"
+              type="text"
+              class="form-control"
+              placeholder="search"
+              aria-label="search"
+              aria-describedby="basic-addon2"
+            />
+            <div class="input-group-append">
+              <span
+                onclick="allPlayers()"
+                class="input-group-text"
+                id="search-btn"
+                >search</span
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 m-auto text-center">
+          <h1>right side</h1>
+        </div>
+      </div>
+    </div>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
